--- a/src/components/ContactCard.css
+++ b/src/components/ContactCard.css
@@ -1,16 +1,48 @@
-.container {
-  max-width: 600px;
-  margin: 0 auto;
+.contact-card-container {
+  display: flex;
+  justify-content: center;
+  align-items: flex-start;
   padding: 20px;
-  box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+}
+
+.flex-container {
+  display: flex;
+  justify-content: space-between;
+  width: 100%;
+  max-width: 1200px; /* Adjust as needed */
+}
+
+.left-section, .right-section {
+  flex: 1;
+  padding: 10px;
+}
+
+.business-info {
   background-color: #fff;
+  padding: 20px;
+  border-radius: 8px;
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+}
+
+.google-map iframe {
+  width: 100%;
+  aspect-ratio: 1 / 1;
+  border: 0;
   border-radius: 8px;
 }
 
-h2 {
-  text-align: center;
-  margin-bottom: 20px;
+.container {
+  max-width: 600px;
+  margin: 0;
+  padding: 20px;
+  background-color: #fff;
+  border-radius: 8px;
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+}
+
+h2, h3 {
   color: #333;
+  text-align: center;
 }
 
 .input-group-addon {
@@ -30,7 +62,6 @@ h2 {
   border: 1px solid #ccc;
   border-radius: 5px;
   width: 100%;
-  box-sizing: border-box;
 }
 
 .form-label {
@@ -41,28 +72,6 @@ h2 {
 .input-group {
   display: flex;
   align-items: stretch;
-}
-
-.dropdown {
-  position: relative;
-}
-
-.dropdown-menu {
-  position: absolute;
-  top: 100%;
-  left: 0;
-  z-index: 1000;
-  display: none;
-  min-width: 100%;
-  padding: 10px 0;
-  margin: 2px 0 0;
-  font-size: 14px;
-  color: #333;
-  text-align: left;
-  background-color: #f9f9f9;
-  border: 1px solid rgba(0, 0, 0, 0.15);
-  border-radius: 4px;
-  box-shadow: 0 6px 12px rgba(0, 0, 0, 0.175);
 }
 
 .dropdown-menu.show {
@@ -77,7 +86,7 @@ h2 {
   display: block;
   margin-top: 20px;
   width: 100%;
-  background-color: #007bff; /* Primary color for the button */
+  background-color: #007bff;
   border: none;
   color: #fff;
   padding: 10px;
@@ -87,5 +96,20 @@ h2 {
 }
 
 .btn:hover {
-  background-color: #0056b3; /* Darker shade for hover effect */
+  background-color: #0056b3;
+}
+
+@media (max-width: 768px) {
+  .flex-container {
+    flex-direction: column;
+  }
+
+  .left-section, .right-section {
+    flex: none;
+    width: 100%;
+  }
+
+  .container {
+    margin-bottom: 20px;
+  }
 }
